--- a/views/index.html
+++ b/views/index.html
@@ -7,13 +7,12 @@
 	<link rel="stylesheet" href="css/main.css">
 	<script src="https://unpkg.com/vue"></script>
 </head>
-
 <body>
 	<main id="app">
 		<section class="form-container">
-			<div>
-					<img src="images/logo.png" alt="logo" width="50px">
-			</div>
+				<div class="logo1">
+						<h2>ChatTime</h2>
+					</div>
 			<label for="nickname">Your Nickname (optional)</label>
 			<input v-model="nickname" type="text" id="nickname" class="nickname" placeholder="What is your nickname?"> <!--v-model is from data object in main_vm.js-->
 
