--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,8 @@ html, body {
 
 body {
   font: 16px Helvetica, Arial;
+  background: #7862c9;
+  background: linear-gradient(180deg, #7862c9 0%, #280687 100%);
 }
 
 main {
@@ -25,23 +27,25 @@ main {
 
 .form-container {
   flex: 1;
-  background: url(../images/grey.jpg) no-repeat center;
+  border-right: 2px solid #bfcfd6;
+  background-color: #7862c9;
+  border-color: white;
 }
 .form-container label {
   display: block;
   margin-bottom: 0.5rem;
+  color: white;
 }
 
 .messages {
   flex: 2;
-  background: url(../images/grey.jpg) no-repeat center;
-  border: 6px solid #e2e0e0;
 }
 
 input, textarea {
   display: block;
   width: 100%;
-  border: 2px solid #bfcfd6;
+  border: 2px solid #cabfd6;
+  border-color: #cabfd6;
   border-radius: 4px;
   font-size: 0.8rem;
   padding: 0.4rem;
@@ -59,7 +63,7 @@ form {
 form input[type=submit] {
   width: auto;
   padding: 10px;
-  background-color: #5198da;
+  background-color: #280687;
   margin-top: 1rem;
   border-radius: 8px;
   color: white;
@@ -68,7 +72,7 @@ form input[type=submit] {
   font-weight: bold;
 }
 form input[type=submit]:hover {
-  background-color: #3282cc;
+  background-color: #4e28b8;
 }
 
 #messages {
@@ -81,6 +85,16 @@ form input[type=submit]:hover {
 }
 #messages li:nth-child(odd) {
   background: #eee;
+}
+
+.logo1 h2 {
+  margin-bottom: 20px;
+}
+
+.logo1 {
+  font-family: monospace;
+  color: white;
+  font-size: 150%;
 }
 
 .new-message {
