--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,12 @@
 
 html, body { height: 100%; }
 
-body { font: 16px Helvetica, Arial; }
+body { 
+	font: 16px Helvetica, Arial;
+	//background-image: url(../images/grey.jpg);
+	background: rgb(120,98,201);
+background: linear-gradient(180deg, rgba(120,98,201,1) 0%, rgba(40,6,135,1) 100%);
+}
 
 main { 
 	display: flex;
@@ -15,26 +20,27 @@ main {
 .form-container, .messages { padding: 20px; }
 .form-container { 
 	flex: 1; 
-	//border: 6px solid #bfcfd6;
-	//background-color: #e3edf1;
+	border-right: 2px solid #bfcfd6;
+	background-color: rgb(120,98,201);
+	border-color: white; 
 
-	background: url(../images/grey.jpg) no-repeat center;
+	//background: url(../images/grey.jpg) no-repeat center;
 
-	label { display: block; margin-bottom: 0.5rem; }
+	label { display: block; margin-bottom: 0.5rem;
+	color:white; }
 }
 
 .messages { 
 	flex: 2;
-	background: url(../images/grey.jpg) no-repeat center;
 	//background-color: #eee;
-	border: 6px solid #e2e0e0; 
+	//border: 6px solid #e2e0e0; 
 }
 
 input, textarea { 
 	display: block; 
 	width: 100%;
-	border: 2px solid #bfcfd6;
-	//border-color: #bfcfd6; 
+	border: 2px solid #cabfd6;
+	border-color: #cabfd6; 
 	border-radius: 4px; 
 	font-size: 0.8rem; 
 	padding: 0.4rem; 
@@ -53,7 +59,7 @@ form {
 	input[type=submit] { 
 		width: auto; 
 		padding: 10px; 
-		background-color: #5198da;
+		background-color: rgba(40,6,135,1);
 		margin-top: 1rem; 
 		border-radius: 8px;
 		color: white;
@@ -63,7 +69,7 @@ form {
 	}
 
 	input[type=submit]:hover {
-		background-color: #3282cc;
+		background-color: rgb(78, 40, 184);
 	}
 }
 
@@ -74,6 +80,15 @@ form {
 	li:nth-child(odd) { background: #eee; }
 }
 
+.logo1 h2 {
+	margin-bottom: 20px;
+}
+
+.logo1 {
+	font-family: monospace;
+	color: white;
+	font-size: 150%;
+}
 // imports
 
 @import 'modules/_message';
