--- a/sass/main.scss
+++ b/sass/main.scss
@@ -84,10 +84,17 @@ form {
 	margin-bottom: 20px;
 }
 
+
 .logo1 {
 	font-family: monospace;
 	color: white;
 	font-size: 150%;
+}
+
+.logo1 p {
+	margin-bottom: 40px;
+	font-size: 80%;
+	font-family: Arial, Helvetica, sans-serif;
 }
 // imports
 
