--- a/sass/modules/_message.scss
+++ b/sass/modules/_message.scss
@@ -13,7 +13,8 @@
 
 .my-message {
     float: right !important;
-    background-color: #5198da;
+    background-color: rgba(40,6,135,1);
     color: white;
     box-shadow: 5px 5px 5px #c8c9c9 ;
+    
 }
