--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
 		<section class="form-container">
 				<div class="logo1">
 						<h2>ChatTime</h2>
+						<p>Welcome to ChatTime! A virtual platform to chat with friends!</p>
 					</div>
 			<label for="nickname">Your Nickname (optional)</label>
 			<input v-model="nickname" type="text" id="nickname" class="nickname" placeholder="What is your nickname?"> <!--v-model is from data object in main_vm.js-->
