--- a/public/css/main.css
+++ b/public/css/main.css
@@ -97,6 +97,12 @@ form input[type=submit]:hover {
   font-size: 150%;
 }
 
+.logo1 p {
+  margin-bottom: 40px;
+  font-size: 80%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .new-message {
   width: 45%;
   padding: 8px 12px;
@@ -115,7 +121,7 @@ form input[type=submit]:hover {
 
 .my-message {
   float: right !important;
-  background-color: #5198da;
+  background-color: #280687;
   color: white;
   box-shadow: 5px 5px 5px #c8c9c9;
 }
